crates/wgso/tests/cases_invalid/directive_pre_validation/.expected
error: duplicated module name `duplicated1` found in file './tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl'
 --> ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:1:18
  |
1 | #shader<compute> duplicated1
  |                  ^^^^^^^^^^^ first definition
  |
 ::: ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:2:18
  |
2 | #shader<compute> duplicated1
  |                  ^^^^^^^^^^^ second definition
  |
error: duplicated module name `duplicated1` found in file './tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl'
 --> ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:2:18
  |
2 | #shader<compute> duplicated1
  |                  ^^^^^^^^^^^ first definition
  |
 ::: ./tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl:3:30
  |
3 | #shader<render, Vertex, f32> duplicated1
  |                              ^^^^^^^^^^^ second definition
  |
error: `missing` module not found in file './tests/cases_invalid/directive_pre_validation/import.wgsl'
 --> ./tests/cases_invalid/directive_pre_validation/import.wgsl:2:9
  |
2 | #import import.missing
  |         ^^^^^^^^^^^^^^
  |
error: './tests/cases_invalid/directive_pre_validation/missing.wgsl' file does not exist
 --> ./tests/cases_invalid/directive_pre_validation/import.wgsl:3:9
  |
3 | #import missing.file
  |         ^^^^^^^^^^^^
  |
error: `missing` module not found in file './tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl'
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:2:7
  |
2 | #init duplicated_shader_name.missing()
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: './tests/cases_invalid/directive_pre_validation/missing.wgsl' file does not exist
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:3:7
  |
3 | #init missing.file()
  |       ^^^^^^^^^^^^
  |
error: `missing` module not found in file './tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl'
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:4:6
  |
4 | #run duplicated_shader_name.missing()
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: './tests/cases_invalid/directive_pre_validation/missing.wgsl' file does not exist
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:5:6
  |
5 | #run missing.file()
  |      ^^^^^^^^^^^^
  |
error: `missing` module not found in file './tests/cases_invalid/directive_pre_validation/duplicated_shader_name.wgsl'
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:6:7
  |
6 | #draw duplicated_shader_name.missing<vertex_buffer, instance_buffer>()
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: './tests/cases_invalid/directive_pre_validation/missing.wgsl' file does not exist
 --> ./tests/cases_invalid/directive_pre_validation/unknown_shader_name.wgsl:7:7
  |
7 | #draw missing.file<vertex_buffer, instance_buffer>()
  |       ^^^^^^^^^^^^
  |